<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group>
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/logout"/>
    <item
        android:id="@+id/add_account"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add_account"/>
    <item
        android:id="@+id/repos"
        android:icon="@drawable/ic_repo"
        android:title="@string/repositories"/>
    <item
        android:id="@+id/starred"
        android:icon="@drawable/ic_star"
        android:title="@string/starred"/>
    <item
        android:id="@+id/pin"
        android:icon="@drawable/ic_baseline_bookmark_border_24"
        android:title="@string/pin"/>

</group>
</menu>